# prototype-equivalences

./: .gitignore  Hutils.py  LICENSE  NFDiffeo.py  README.md  aug_benchmark.py  create_data.ipynb  demo.ipynb  fit_SPE.py  fit_archetype.py  fitting_tests.ipynb  grid_benchmark.py  invariant_benchmark.py  invariant_set_test.py  multidim_benchmark.py  pancreas_data.py  param_robustness_test.py  parse_results.py  pyproject.toml  repressilator.py  requirements.txt  sparse_benchmark.py  systems.py
SPE/: SPE.py
dynamics/: prototypes.py  systems.py  utils.py
models/: NFDiffeo.py  baselines.py
notebooks/: demo.ipynb
src/spe/SPE/: SPE.py  __init__.py
src/spe/dynamics/: prototypes.py  systems.py  utils.py
src/spe/models/: NFDiffeo.py  SINDY_AE.py  baselines.py
src/spe/pp/: OT_velo.py  RNA_velo.py  __init__.py
